# TFTP

./: .gitignore  CMakeLists.txt  README.md  file.txt
src/: client.c  common.c  common.h  progress.c  progress.h  server.c  tftp.c  tftp.h  tftp_client.c  tftp_client.h  tftp_packet.c  tftp_packet.h  tftp_server.c  tftp_server.h  utils.c  utils.h
